Update: change structure to my own version
