# docs/swagger.yaml
@@ -20,6 +20,27 @@ definitions:
       stock:
         type: integer
     type: object
+  model.Task:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      status:
+        $ref: '#/definitions/model.TaskStatus'
+      title:
+        type: string
+    type: object
+  model.TaskStatus:
+    enum:
+    - pending
+    - in_progress
+    - completed
+    type: string
+    x-enum-varnames:
+    - TaskStatusPending
+    - TaskStatusInProgress
+    - TaskStatusCompleted
 host: localhost:8080
 info:
   contact: {}
@@ -278,6 +299,105 @@ paths:
       summary: Update product
       tags:
       - products
+  /api/tasks:
+    get:
+      consumes:
+      - application/json
+      description: Mengambil semua data user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get all tasks
+      tags:
+      - tasks
+    post:
+      consumes:
+      - application/json
+      description: Membuat Task baru
+      parameters:
+      - description: Task Data
+        in: body
+        name: task
+        required: true
+        schema:
+          $ref: '#/definitions/model.Task'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Create new Task
+      tags:
+      - tasks
+  /api/tasks/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Mengambil task berdasarkan ID
+      parameters:
+      - description: task ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get task by ID
+      tags:
+      - tasks
+    patch:
+      consumes:
+      - application/json
+      description: Update task berdasarkan ID
+      parameters:
+      - description: task ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Task Data
+        in: body
+        name: task
+        required: true
+        schema:
+          $ref: '#/definitions/model.Task'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update Task
+      tags:
+      - tasks
   /health:
     get:
       consumes:
