# main.go
@@ -24,18 +24,24 @@ func main() {
 
 	// Register routes
 	http.HandleFunc("GET /api/products", handler.GetProducts)
-	http.HandleFunc("GET /api/products/", handler.GetProductByID)
+	http.HandleFunc("GET /api/products/{id}", handler.GetProductByID)
 	http.HandleFunc("POST /api/products", handler.CreateProduct)
-	http.HandleFunc("PUT /api/products/", handler.UpdateProduct)
-	http.HandleFunc("DELETE /api/products/", handler.DeleteProduct)
+	http.HandleFunc("PUT /api/products/{id}", handler.UpdateProduct)
+	http.HandleFunc("DELETE /api/products/{id}", handler.DeleteProduct)
 
 	http.HandleFunc("GET /api/categories", handler.GetCategories)
-	http.HandleFunc("GET /api/categories/", handler.GetCategoryByID)
+	http.HandleFunc("GET /api/categories/{id}", handler.GetCategoryByID)
 	http.HandleFunc("POST /api/categories", handler.CreateCategory)
-	http.HandleFunc("PUT /api/categories/", handler.UpdateCategory)
-	http.HandleFunc("DELETE /api/categories/", handler.DeleteCategory)
+	http.HandleFunc("PUT /api/categories/{id}", handler.UpdateCategory)
+	http.HandleFunc("DELETE /api/categories/{id}", handler.DeleteCategory)
 
-	http.HandleFunc("/health", handler.HealthCheck)
+	http.HandleFunc("GET /api/tasks", handler.GetAllTasks)
+	http.HandleFunc("GET /api/tasks/{id}", handler.GetTaskByID)
+	http.HandleFunc("POST /api/tasks", handler.CreateTask)
+	http.HandleFunc("PATCH /api/tasks/{id}", handler.UpdateTask)
+	http.HandleFunc("DELETE /api/tasks/{id}", handler.DeleteTask)
+
+	http.HandleFunc("GET /health", handler.HealthCheck)
 
 	// Swagger
 	http.HandleFunc("/swagger/", httpSwagger.WrapHandler)
@@ -46,7 +52,7 @@ func main() {
 		port = "8080"
 	}
 
-	fmt.Printf("server running on port %s\n", port)
+	fmt.Printf("🚀 server running on port %s\n", port)
 	err := http.ListenAndServe(":"+port, nil)
 	if err != nil {
 		panic("gagal running server")
